--- a/JavaMacros/.project
+++ b/JavaMacros/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Sgi.utilities</name>
+	<name>JavaMacros</name>
 	<comment></comment>
 	<projects>
 	</projects>
