--- a/JavaMacros/.classpath
+++ b/JavaMacros/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Sgi.utilities"/>
 	<classpathentry kind="lib" path="lib/jna-4.1.0.jar" sourcepath="lib/jna-src.zip"/>
-	<classpathentry kind="lib" path="lib/jna-platform-4.1.0.jar" sourcepath="/com.sun.jna.platform/src"/>
+	<classpathentry kind="lib" path="lib/jna-platform-4.1.0.jar" sourcepath="lib/jna-platform.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="httpServer"/>
 	<classpathentry kind="output" path="bin"/>
